--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
         "@mui/material": "^5.15.17",
         "next": "14.2.3",
         "react": "^18",
-        "react-dom": "^18"
+        "react-dom": "^18",
+        "react-image-gallery": "^1.3.0"
     },
     "devDependencies": {
         "@types/node": "^20",
         "@types/react": "^18",
         "@types/react-dom": "^18",
+        "@types/react-image-gallery": "^1.2.4",
         "autoprefixer": "^10.4.19",
         "eslint": "^8",
         "eslint-config-next": "14.2.3",
