--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
         "dev": "next dev -p 9527",
         "build": "next build",
         "start": "next start -p 9527",
-        "lint": "next lint"
+        "lint": "next lint",
+        "start:pm2": "pm2 restart pm2.config.js"
     },
     "dependencies": {
         "@emotion/react": "^11.11.4",
